test/instance-checks-9.ktn
def example {a}(Int a -> a a): ->x y; x y
